--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
-</head>
-<body>
-    <embed src="Maxwell_Fusco_Resume.pdf" width="800px" height="2100px" />
-</body>
-</html>
+<meta http-equiv="Refresh" content="0;Maxwell_Fusco_Resume.pdf"/>
