--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0;URL=https://raw.githubusercontent.com/1nv8rzim/resume.1nv8rzim.github.io/main/Maxwell_Fusco_Resume.pdf"/>
+<meta http-equiv="Refresh" content="0;/Maxwell_Fusco_Resume.pdf"/>
